# discord_bot

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Secrets.example.toml  schema.pgsql  schema.sql
.cargo/: config.example.toml
.github/workflows/: ci.yml
cargo-make-scripts/ensure_cfg/: Cargo.toml
cargo-make-scripts/ensure_cfg/src/: main.rs
cargo-make-scripts/ensure_config/: Cargo.toml
cargo-make-scripts/ensure_config/src/: main.rs
src/: config_ext.rs  consts.rs  db.rs  error.rs  main.rs
src/app_cache/: in_cache.rs  membership.rs  mod.rs  sync.rs
src/app_state/: exp.rs  in_cache.rs  mod.rs  roles.rs  sync.rs  type_map_keys.rs
src/app_state/reqd_prompts/: mod.rs
src/bots/: bot.rs  cfg_ext.rs  config_ext.rs  main_bot.rs  mod.rs  test_bot.rs
src/commands/: mod.rs  ping.rs  role.rs  sql.rs  stop.rs
src/db/: dao.rs  mod.rs
src/immut_data/: consts.rs  dynamic.rs  mod.rs
src/roles/: mod.rs  self_roles.rs
src/util/: macros.rs  mod.rs
