[package]
name = "cherry-caffeine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.21.0"
shuttle-runtime = "0.21.0"
shuttle-shared-db = { version = "0.21", features = ["postgres"] }
sqlx = { version = "0.6", features = ["postgres"] }
# shuttle-secrets = "0.21.0"
tokio = "1.26.0"
tracing = "0.1.37"
const-str = "0.5"
ux = "0.1.5"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "cache",
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "framework",
    "standard_framework",
]
