[package]
name = "cherry-caffeine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
shuttle-serenity = "0.23.0"
shuttle-runtime = "0.23.0"
shuttle-shared-db = { version = "0.23", features = ["postgres"] }
sqlx = { version = "0.7.1", features = ["postgres"] }
# shuttle-secrets = "0.21.0"
tokio = "1.29.1"
tracing = "0.1.37"
const-str = "0.5"
drain_at_sorted_unchecked = "0.1"
rand = "0.8"
serde_json = { version = "1.0.104", features = ["std"] }
regex = "1.9.3"
once_cell = "1.18.0"
thiserror = "1"
itertools = "0.11"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "cache",
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "framework",
    "standard_framework",
]
